--- a/foxblog_project/blog/templates/blog/base.html
+++ b/foxblog_project/blog/templates/blog/base.html
@@ -11,6 +11,7 @@
         {%else%}
             <title>FOX's Blog</title>
         {%endif%}
+        {% webpush_header %}
     </head>
     <body>
         <header class="site-header">
@@ -58,6 +59,7 @@
                 </div>
                 </div>
             </div>
+            {% webpush_button %}
         </main>
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
