--- a/foxblog_project/blog/templates/blog/base.html
+++ b/foxblog_project/blog/templates/blog/base.html
@@ -29,7 +29,7 @@
                 <!-- Navbar Right Side -->
                 <div class="navbar-nav">
                 <a class="nav-item nav-link" href="#">Login</a>
-                <a class="nav-item nav-link" href="#">Register</a>
+                <a class="nav-item nav-link" href="/register">Register</a>
                 </div>
             </div>
             </div>
@@ -39,6 +39,13 @@
         <div class="row">
             <div class="col-md-8">
             {% block content %}{% endblock %}
+            {% if messages %}
+                {% for message in messages %}
+                    <div class="alert alert-{{ message }}">
+                        {{ message }}
+                    </div>
+                {% endfor %}
+            {% endif %}
             </div>
             <div class="col-md-4">
             <div class="content-section">
