--- a/foxblog_project/users/templates/users/login.html
+++ b/foxblog_project/users/templates/users/login.html
@@ -5,16 +5,16 @@
         <form method="POST">
             {% csrf_token %}
             <fieldset class="form-group">
-                <legend class="border-bottom mb-4">Join today!</legend>
+                <legend class="border-bottom mb-4">Log in!</legend>
                 {{ form | crispy }}
             </fieldset>
             <div class="form-group">
-                <button class="btn btn-outline-info" type="submit">Sign up</button>
+                <button class="btn btn-outline-info" type="submit">Login</button>
             </div>
             <div class="border-top pt-3">
                 <small class="text-muted">
-                    Have account already or not?
-                    <a href="{% url 'login' %}" class="ml-2">sign in</a>
+                    Need account or not?
+                    <a href="{% url 'register' %}" class="ml-2">sign up</a>
                 </small>
             </div>
         </form> 
