--- a/foxblog_project/blog/templates/blog/home.html
+++ b/foxblog_project/blog/templates/blog/home.html
@@ -3,6 +3,7 @@
 <h1>FOX's Home</h1>
 {% for post in posts %}
     <article class="media content-section">
+        <img src="{{ post.author.profile.image.url }}" class="rounded-circle article-img" />
         <div class="media-body">
             <div class="article-metadata">
                 <a class="mr-2" href="#">{{ post.author }}</a>
