--- a/foxblog_project/users/templates/users/logout.html
+++ b/foxblog_project/users/templates/users/logout.html
@@ -4,7 +4,7 @@
         <h2>You have been logout!</h2>
         <div class="border-top pt-3">
             <small class="text-muted">
-                <a href="{% url 'login' %}" class="ml-2">sign in again</a>
+                <a href="{% url 'login' %}" class="btn btn-info btn-sm mt-1 mb-1">Sign in again</a>
             </small>
         </div>
     </div>
